fix alignment on load

--- a/src/App.css
+++ b/src/App.css
@@ -22,9 +22,10 @@ html, body {
 .prompt-list {
   display: flex;
   flex-direction: column;  
-  gap: 40px;
-  width: 300px;
+  gap: 30px;
+  width: 100%;
   line-height: 150%;
+  align-items: center;
 }
 
 .prompt {
@@ -33,8 +34,22 @@ html, body {
   border: 1px solid white;
   padding: 8px 12px;
   text-transform: uppercase;
-  /* transition: box-shadow .5s; */
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  border: 1px solid transparent;
 }
+
+.prompt-text {
+  justify-content: center;
+  width: 300px;
+}
+
+/* .prompt:hover {
+  border: 2px dashed mediumorchid;
+  background: rgba(186, 85, 211, 0.065);
+  border-radius: 100px;
+} */
 
 .single-prompt {
   display: block;
